# myetl

./: pyproject.toml
dags/: f_agg_data.py  f_load_data.py  myetl.py
note/: myetl_test.ipynb
src/myetl/: f_agg_data.py  f_load_data.py
tests/: test_agg.py  test_load.py
