[project]
name = "myetl"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "nunininu", email = "sgcho0907@gmail.com"},
]
dependencies = ["pandas>=2.2.3", "jupyter>=1.1.1", "lab>=8.4", "datetime>=5.5", "pendulum>=3.0.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
